[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz", "docs/book"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
resolver = "2"

[workspace.package]
rust-version = "1.74.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
anyhow = "1.0.22"
arbitrary = { version = "1.0.1", features = ["derive"] }
async-io = "2"
assert_matches = "1.1"
aws-lc-rs = { version = "1.9", default-features = false }
bencher = "0.1.5"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc = "3"
directories-next = "2"
fastbloom = "0.14"
futures-io = "0.3.19"
getrandom = { version = "0.3", default-features = false }
hdrhistogram = { version = "7.2", default-features = false }
hex-literal = "1"
lru-slab = "0.1.2"
lazy_static = "1"
log = "0.4"
once_cell = "1.19"
pin-project-lite = "0.2"
qlog = "0.15.2"
rand = "0.9"
rcgen = "0.14"
ring = "0.17"
rustc-hash = "2"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rustls-platform-verifier = "0.6"
rustls-pki-types = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slab = "0.4.6"
smol = "2"
socket2 = ">=0.5, <0.7"
thiserror = "2.0.3"
tinyvec = { version = "1.1", features = ["alloc"] }
tokio = { version = "1.28.1", features = ["sync"] }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"
wasm-bindgen-test = { version = "0.3.45" }
web-time = "1"
windows-sys = { version = ">=0.52, <=0.61", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock"] }
cfg_aliases = "0.2"

[profile.bench]
debug = true

[profile.release]
debug = true
