[package]
name = "e2e-dashboard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Real-time dashboard for ant-quic E2E testing"

[[bin]]
name = "e2e-dashboard"
path = "src/main.rs"

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# State management
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
