[package]
name = "fuzz"
version = "0.1.0"
authors = [
    "Benjamin Saunders <ben.e.saunders@gmail.com>", "Dirkjan Ochtman <dirkjan@ochtman.nl>",
]
publish = false
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "0.4.5", features = ["derive"] }
libfuzzer-sys = "0.3"

[dependencies.proto]
features = ["arbitrary"]
path = "../quinn-proto"
package = "quinn-proto"
version = "0.6.1"

[[bin]]
name = "streams"
path = "fuzz_targets/streams.rs"
test = false
doc = false

[[bin]]
name = "streamid"
path = "fuzz_targets/streamid.rs"
test = false
doc = false

[[bin]]
name = "packet"
path = "fuzz_targets/packet.rs"
test = false
doc = false
