[package]
name = "interop"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>", "Jean-Christophe BEGUE <begue.jc@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
default-run = "main"
publish = false

[dependencies]
anyhow = "1.0.22"
bytes = "1"
futures = "0.3.8"
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14.1", features = ["client", "server", "http2"] }
hyper-rustls = "0.22.1"
lazy_static = "1"
quinn = { path = "../quinn" }
quinn-h3 = { path = "../quinn-h3", features = ["interop-test-accessors"] }
quinn-proto = { path = "../quinn-proto" }
rustls = { version = "0.19", features = ["dangerous_configuration"] }
structopt = "0.3.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "io-util"] }
tokio-rustls = "0.22"
tracing = "0.1.10"
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
webpki = "0.21"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "qif"
path = "src/qif.rs"
