[package]
name = "perf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["json-output"]
# Allow for json output from the perf client
json-output = ["serde", "serde_json"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
quinn = { path = "../quinn" }
quinn-proto = { path = "../quinn-proto" }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, optional = true  }
serde_json = { workspace = true, optional = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "signal", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
