[package]
name = "quicr"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Ralith/quicr"
description = "QUIC transport protocol implementation for Tokio"
readme = "../README.md"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]

[badges]
maintenance = { status = "experimental" }

[dependencies]
quicr-core = { path = "..", version = "0.2.0" }
tokio-reactor = "0.1.1"
tokio-udp = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2.1"
slog = "2.1"
futures = "0.1.21"
fnv = "1.0.6"
openssl = "0.10.6"
failure = "0.1"
bytes = "0.4.7"

[dev-dependencies]
tokio = "0.1.5"
slog-term = "2"
rand = "0.4"
url = "1.7"
structopt = "0.2.7"
