[package]
name = "quicr"
version = "0.3.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Ralith/quicr"
description = "QUIC transport protocol implementation for Tokio"
readme = "../README.md"
documentation = "https://ralith.github.io/quicr/quicr/"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]

[badges]
maintenance = { status = "experimental" }

[dependencies]
quicr-core = { path = "..", version = "0.3.0" }
tokio-reactor = "0.1.1"
tokio-udp = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2.1"
slog = "2.1"
futures = "0.1.21"
fnv = "1.0.6"
openssl = { git = "https://github.com/Ralith/rust-openssl", branch = "max-early-data-accessors", features = ["v111"] }
failure = "0.1"
bytes = "0.4.7"
rand = "0.4"

[dev-dependencies]
tokio = "0.1.6"
slog-term = "2"
url = "1.7"
structopt = "0.2.7"
