[package]
name = "quinn-h3"
version = "0.0.1"
authors = [
    "Benjamin Saunders <ben.e.saunders@gmail.com>", "Dirkjan Ochtman <dirkjan@ochtman.nl>",
    "Jean-Christophe BEGUE <begue.jc@gmail.com>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/djc/quinn"
description = "QUIC HTTP/3 protocol implementation"
readme = "../README.md"
keywords = ["quic", "http3", "qpack"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
codecov = { repository = "djc/quinn" }
maintenance = { status = "experimental" }
travis-ci = { repository = "djc/quinn" }

[dependencies]
bitlab = "0.8.1"
bytes = "0.5.2"
err-derive = "0.2"
futures = "0.3.1"
http = { git = "https://github.com/hyperium/http", rev = "43dffa1eb79f6801e5e07f3338fa56191dc454bb" }
lazy_static = "1"
quinn-proto = { path = "../quinn-proto", version = "0.4.0" }
quinn = { path = "../quinn", version = "0.4.0" }
string = { git = "https://github.com/carllerche/string" }
tokio = "0.2.2"
tokio-util = { version = "0.2.0", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0.22"
assert_matches = "1.1"
directories = "2.0.1"
proptest = "0.9.1"
rand = "0.7.0"
rcgen = "0.7"
structopt = "0.3.0"
tracing = "0.1.10"
tracing-subscriber = "0.1.5"
tokio = { version = "0.2.2", features = ["io-util", "macros", "rt-threaded"] }
url = "2"

[[example]]
name = "h3"

# [[example]]
# name = "simple_server"

# [[example]]
# name = "simple_client"
