[package]
name = "quinn-h3"
version = "0.0.1"
authors = [
    "Benjamin Saunders <ben.e.saunders@gmail.com>", "Dirkjan Ochtman <dirkjan@ochtman.nl>",
    "Jean-Christophe BEGUE <begue.jc@gmail.com>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/djc/quinn"
description = "QUIC HTTP/3 protocol implementation"
readme = "../README.md"
keywords = ["quic", "http3", "qpack"]
categories = [ "network-programming", "asynchronous" ]
workspace = ".."
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
interop-test-accessors = []

[badges]
codecov = { repository = "djc/quinn" }
maintenance = { status = "experimental" }

[dependencies]
bytes = "0.5.2"
err-derive = "0.2.3"
futures = "0.3.1"
futures-util = { version = "0.3", default-features = false }
http = "0.2"
http-body = "0.3"
lazy_static = "1"
pin-project = "0.4"
quinn-proto = { path = "../quinn-proto", version = "0.6.0" }
quinn = { path = "../quinn", version = "0.6.0", features = ["tls-rustls"] }
rustls = { version = "0.17", features = ["quic"] }
tokio = "0.2.6"
tokio-util = { version = "0.3.0", features = ["codec"] }
tracing = "0.1.10"
webpki = "0.21"

[dev-dependencies]
anyhow = "1.0.22"
assert_matches = "1.1"
bencher = "0.1.5"
directories = "2.0.1"
proptest = "0.9.1"
rand = "0.7.0"
rcgen = "0.8"
structopt = "0.3.0"
tokio = { version = "0.2.6", features = ["io-util", "macros", "rt-threaded", "time", "fs"] }
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
url = "2"

[[example]]
name = "h3_server"

[[example]]
name = "h3_client"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "request"
harness = false
