[package]
name = "quinn-test"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
description = "Conformance testing library for quinn and crypto providers"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]
workspace = ".."
edition = "2021"
rust-version = "1.59"

[dependencies]
assert_matches = "1.5.0"
bytes = "1"
hex-literal = "0.3.0"
lazy_static = "1.4.0"
quinn-proto = { path = "../quinn-proto", features = ["integration-tests"] }
rand = "0.8"
rcgen = "0.10.0"
ring = { version = "0.16.7" }
rustls = { version = "0.20.4", default-features = false, features = ["quic"] }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }

