[package]
name = "quinn-udp"
version = "0.5.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UDP sockets with ECN information for the QUIC transport protocol"
keywords.workspace = true
categories.workspace = true
workspace = ".."

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tracing", "log"]
# Configure `tracing` to log events via `log` if no `tracing` subscriber exists.
log = ["tracing/log"]
direct-log = ["dep:log"]

[dependencies]
libc = "0.2.158"
log = { workspace = true, optional = true }
socket2 = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
windows-sys = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.bench]
name = "throughput"
harness = false
